# mellon

./: .gitignore  .travis.yml  Makefile  README.md  TODO.org  cabal.project  default.nix  mellon-server.cabal  mellon-server.paw  mellon.cabal  next.nix  release.nix  shell.nix  sources.txt  stack-lts-10.yaml  stack-lts-11.yaml  stack-lts-13.yaml  stack-lts-9.yaml  stack.yaml
mellon/: MainCmd.hs  README.md  changelog.md  default.nix  mellon.cabal  shell.nix
mellon-client/: README.md  changelog.md  default.nix  mellon-client.cabal  mellon-server.cabal  shell.nix
mellon-client/src/Mellon/: Client.hs
mellon-client/test/: ClientTests.hs  MellonClientSpec.hs  MellonSpec.hs
mellon-core/: .hlint.yaml  Hlint.hs  Makefile  README.md  changelog.md  default.nix  mellon-core.cabal  package.yaml  release.nix  shell.nix
mellon-core/nix/: mellon-core.nix
mellon-core/src/Mellon/: Controller.hs  Device.hs  StateMachine.hs
mellon-core/src/Mellon/Controller/: Async.hs
mellon-core/test/Mellon/: ControllerSpec.hs
mellon-core/test/Mellon/Controller/: AsyncSpec.hs
mellon-gpio/: Makefile  README.md  changelog.md  default.nix  mellon-gpio.cabal  package.yaml  release.nix  shell.nix
mellon-gpio/mellon-gpio/: Main.hs
mellon-gpio/nix/: mellon-gpio.nix
mellon-gpio/src/Mellon/: Gpio.hs
mellon-gpio/src/Mellon/Device/: GPIO.hs
mellon-pi/: README.md  default.nix  mellon-pi.cabal  shell.nix
mellon-pi/mellon-pi/: Main.hs
mellon-pi/src/Mellon/: Pi.hs
mellon-server/: API.md  Main.hs  README.md  changelog.md  default.nix  mellon-server.cabal  mellon-server.paw  shell.nix
mellon-server/examples/: Main.hs  MockServer.hs  Serve.hs
mellon-server/src/Mellon/: Server.hs
mellon-server/src/Mellon/Server/: API.hs  Docs.hs  DocsAPI.hs
mellon-server/src/Web/: Mellon.hs
mellon-server/src/Web/Mellon/: Service.hs
mellon-server/test/: MellonServerSpec.hs  MellonSpec.hs  ServerTests.hs
mellon-web/: .gitignore  API.md  Makefile  README.md  changelog.md  default.nix  mellon-web.cabal  package.yaml  release.nix  shell.nix  swagger.json
mellon-web/examples/: GpioServer.hs  MockServer.hs  ScheduleUnlock.hs
mellon-web/nix/: mellon-web.nix
mellon-web/src/Mellon/Web/: Client.hs  Server.hs
mellon-web/src/Mellon/Web/Server/: API.hs  DocsAPI.hs  SwaggerAPI.hs
mellon-web/test/: Main.hs
mellon-web/test/Mellon/Web/: ClientSpec.hs  ServerSpec.hs  SwaggerAPISpec.hs
mellon/src/: Mellon.hs
mellon/src/Mellon/: ConcurrentController.hs  Controller.hs  Lock.hs  LockDevice.hs  MockLock.hs  MonadController.hs  MonadLock.hs  StateMachine.hs
mellon/src/Mellon/Controller/: Concurrent.hs
mellon/src/Mellon/Controller/Monad/: Class.hs
mellon/src/Mellon/Device/: Class.hs  MockLock.hs
mellon/src/Mellon/Lock/: Device.hs  Mock.hs  Monad.hs
mellon/src/Mellon/Lock/Monad/: Class.hs
mellon/src/Mellon/Monad/: Controller.hs  Lock.hs  StateMachine.hs
mellon/src/Mellon/Monad/Controller/: Class.hs  Trans.hs
mellon/src/Mellon/Monad/Lock/: Class.hs  Trans.hs
mellon/src/Mellon/MonadController/: Class.hs
mellon/src/Mellon/MonadLock/: Class.hs
mellon/src/System/Mellon/: ConcurrentController.hs  MonadController.hs  StateMachine.hs
mellon/src/System/Mellon/MonadController/: Class.hs
mellon/test/: MellonSpec.hs
mellon/test/System/: MellonSpec.hs
nix/: hpio-src.json  lib.nix  mellon-core.nix  mellon-gpio.nix  mellon-web.nix  nixpkgs-stackage-nixpkgs-src.json  overlays-next.nix  overlays.nix
nix/jobsets/: default.nix  next.nix  release.nix  spec.json  testing.nix
nix/lib/: default.nix
nix/overlays/: haskell-overrides-maintainer.nix  haskell-overrides-next.nix  haskell-overrides.nix  lib.nix
nix/pkgs/: mellon-core-all-tests.nix  mellon-core-hlint.nix  mellon-core-maintainer.nix  mellon-core.nix  mellon-gpio-all-tests.nix  mellon-gpio-hlint.nix  mellon-gpio-maintainer.nix  mellon-gpio.nix  mellon-web-all-tests.nix  mellon-web-hlint.nix  mellon-web-maintainer.nix  mellon-web.nix
scripts/: README.md  bump-versions.sh  generate-nix-files.sh  test-all.sh  upload.sh
scripts/lib/: common.sh
src/System/: Mellon.hs
src/System/Mellon/: ConcurrentController.hs  Controller.hs  Impl.hs  Lock.hs  LockDevice.hs  MockLock.hs  MonadLock.hs  NewStateMachine.hs  StateMachine.hs
src/System/Mellon/Controller/: Class.hs  Concurrent.hs  Controller.hs  Free.hs  NewConcurrent.hs  NewController.hs  ThreadedController.hs  TimedController.hs
src/System/Mellon/Impl/: MockController.hs  MockLock.hs  ThreadedController.hs  TimedController.hs
src/System/Mellon/Lock/: Class.hs
src/System/Mellon/MonadController/: Class.hs
src/System/Mellon/MonadLock/: Class.hs
src/Web/Mellon/: Service.hs
test/System/: MellonSpec.hs
test/Web/: MellonSpec.hs
