Name:                   mellon-server
Version:                0.0.1
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Web.Mellon
                      , Web.Mellon.Service
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , either
                      , optparse-applicative >= 0.11.0
                      , servant
                      , servant-docs
                      , servant-server
                      , time
                      , transformers
                      , wai
                      , warp

Executable mellon-server
  Main-Is:              Main.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       mellon-server
                      , src
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , either
                      , optparse-applicative >= 0.11.0
                      , servant
                      , servant-docs
                      , servant-server
                      , time
                      , transformers
                      , wai
                      , warp
  Other-Modules:        Web.Mellon

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
  Other-Modules:        Web.Mellon

Source-Repository head
  Type:                 git
--  Location:             
