Name:                   mellon
Version:                0.0.0
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      System.Mellon
                      , System.Mellon.Controller
                      , System.Mellon.Impl
                      , System.Mellon.Impl.MockController
                      , System.Mellon.StateMachine
  Build-Depends:        base >= 4 && < 5
                      , free
                      , text
                      , time
                      , transformers

Executable mellon
  Main-Is:              MainCmd.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       mellon
                      , src
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , free
                      , optparse-applicative >= 0.11.0
                      , text
                      , time
                      , transformers
  Other-Modules:        System.Mellon

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , free
                      , hspec
                      , text
                      , time
                      , transformers
  Other-Modules:        System.Mellon

Source-Repository head
  Type:                 git
--  Location:             
