Name:                   mellon
Version:                0.0.0
Cabal-Version:          >= 1.10
Build-Type:             Simple
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
Stability:              experimental
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2015, Drew Hess
Tested-With:            GHC == 7.10.1
Synopsis:               Control physical access devices
Description:
  "Speak, friend, and enter."
  .
  @System.Mellon@ is a Haskell package for controlling physical access
  devices, e.g., electric strikes. It provides a simple abstract state
  machine for locking and unlocking such devices.
  .
  <mellon-state-diagram.png (local copy of @mellon@ state diagram)>
  .

  @System.Mellon@ is a low-level package that provides:
  .
  * The 'System.Mellon.Lock.Lock' typeclass, which provides a generic
    interface for the physical device.
  .
  * The 'System.Mellon.Controller.Controller' typeclass, which
    provides a generic interface for controlling a device from a user
    application or service.
  .
  * Two 'System.Mellon.Controller.Controller' instances,
    'System.Mellon.Impl.ThreadedController.ThreadedController' and
    'System.Mellon.Impl.TimedController.TimedController', each with a
    different scheduler implementation.
  .
  Note that @System.Mellon@ does not provide any useful
  'System.Mellon.Lock.Lock' implementations; that is the domain of
  access device implementation-specific packages. Similarly,
  @System.Mellon@ does not provide authentication mechanisms or
  network services; that is the domain of higher-level packages which
  use the base @System.Mellon@ package.

Extra-Source-Files:   images/*.png

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      System.Mellon
                      , System.Mellon.Controller
                      , System.Mellon.Impl
                      , System.Mellon.Impl.MockLock
                      , System.Mellon.Impl.TimedController
                      , System.Mellon.Impl.ThreadedController
                      , System.Mellon.Lock
                      , System.Mellon.StateMachine
  Build-Depends:        base >= 4 && < 5
                      , free
                      , text
                      , time
                      , transformers

Executable mellon
  Main-Is:              MainCmd.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       mellon
                      , src
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , free
                      , optparse-applicative >= 0.11.0
                      , text
                      , time
                      , transformers
  Other-Modules:        System.Mellon

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , free
                      , hspec
                      , text
                      , time
                      , transformers
  Other-Modules:        System.Mellon

Source-Repository head
  Type:                 git
--  Location:             
