Name:                   mellon-client
Version:                0.3.2
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Haskell client bindings for mellon-server
Description:
  @mellon-client@ automatically generates Haskell client 
  bindings for the @mellon-server@ REST API.

Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Mellon.Client
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , bytestring
                      , either
                      , http-types
                      , lucid
                      , mellon
                      , mellon-server
                      , servant
                      , servant-client
                      , text
                      , time
                      , transformers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Main.hs
  Build-Depends:        aeson
                      , base
                      , bytestring
                      , either
                      , hspec
                      , mellon
                      , mellon-server
                      , network
                      , servant
                      , servant-client
                      , text
                      , time
                      , transformers
                      , wai
                      , warp
  Other-Modules:        Mellon.Client

Source-Repository head
  Type:                 git
  Location:             https://github.com/dhess/mellon.git
