Name:                   mellon-client
Version:                0.6.0.1
Cabal-Version:          >= 1.10
Build-Type:             Simple
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
Homepage:               https://github.com/dhess/mellon/
Bug-Reports:            https://github.com/dhess/mellon/issues/
Stability:              experimental
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2016, Drew Hess
Tested-With:            GHC == 7.10.3
Category:               Web
Synopsis:               Haskell client bindings for mellon-server
Description:
  @mellon-client@ automatically generates Haskell client 
  bindings for the @mellon-server@ REST API.
Extra-Doc-Files:        README.md
Extra-Source-Files:     changelog.md

-- Build doctests
Flag test-doctests
  Default: True
  Manual: True

-- Build hlint test
Flag test-hlint
  Default: True
  Manual: True

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  If impl(ghc > 8)
    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
  Exposed-Modules:      Mellon.Client
  Other-Extensions:     DataKinds
                      , TypeOperators
  Build-Depends:        aeson
                      , base >= 4 && < 5
                      , bytestring
                      , either
                      , http-client >= 0.4.28
                      , http-types
                      , lucid
                      , mellon
                      , mellon-server
                      , servant
                      , servant-client
                      , text
                      , time
                      , transformers

Test-Suite hlint
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -w -threaded -rtsopts -with-rtsopts=-N
  Main-Is:              hlint.hs
  If !flag(test-hlint)
    Buildable:          False
  Else
    Build-Depends:      base
                      , hlint

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall -threaded
  Main-Is:              doctest.hs
  If !flag(test-doctests)
    Buildable:          False
  Else
    Build-Depends:      base
                      , doctest

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -w -threaded -rtsopts -with-rtsopts=-N
  Main-Is:              Main.hs
  Build-Depends:        aeson
                      , base
                      , bytestring
                      , either
                      , hspec
                      , http-client >= 0.4.28
                      , mellon
                      , mellon-server
                      , network
                      , servant
                      , servant-client
                      , text
                      , time
                      , transformers
                      , wai
                      , warp
  Other-Modules:        Mellon.Client
                      , MellonClientSpec
                      , Spec

Source-Repository head
  Type:                 git
  Location:             git://github.com/dhess/mellon.git

Source-Repository this
  Type:                 git
  Location:             git://github.com/dhess/mellon.git
  Tag:                  v0.6.0.1
