Name:                   mellon-gpio
Version:                0.6
Cabal-Version:          >= 1.10
Build-Type:             Simple
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
Homepage:               https://github.com/dhess/mellon/
Bug-Reports:            https://github.com/dhess/mellon/issues/
Stability:              experimental
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2015, Drew Hess
Tested-With:            GHC == 7.10.1
Synopsis:               Run a mellon controller using GPIO
Description:
  @mellon-gpio@ mixes @mellon@ and @mellon-server@ together with the
  @gpio@ package to create a turnkey physical access controller.
  Simply connect a properly-designed physical access device (e.g., an
  electric strike driven by a relay circuit such as the one shown
  <http://www.petervis.com/Raspberry_PI/Driving_Relays_with_CMOS_and_TTL_Outputs/Driving_Relays_with_CMOS_and_TTL_Outputs.html
  here>) to an available GPIO pin on your host device, then run
  @mellon-gpio@ with the specified GPIO pin number and port to provide
  a REST web service for your access device.
  .
  __NOTE__: the REST service provided by @mellon-gpio@ offers no
  security/authentication for your access control device! You should
  always run @mellon-gpio@ behind a secure proxy web service or
  equivalent HTTP(S)-based authentication mechanism.

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Mellon.Gpio
  Build-Depends:        base >= 4 && < 5
                      , gpio >= 0.5.1
                      , mellon
                      , mellon-server
                      , mtl
                      , network
                      , transformers
                      , warp

Executable mellon-gpio
  Main-Is:              Main.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       mellon-gpio
                      , src
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , gpio
                      , mellon
                      , mellon-server
                      , mtl
                      , network
                      , optparse-applicative
                      , transformers
                      , warp
  Other-Modules:        Mellon.Gpio

Source-Repository head
  Type:                 git
  Location:             git://github.com/dhess/mellon.git
