Name:                   mellon-server
Version:                0.4.0
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               A REST web service for mellon
Description:
  @mellon-server@ wraps a @mellon@ controller in a REST web service.
  .
  See the included <API.md API.md> file for detailed documentation
  on the REST service methods and document types.
  .
  Note that @mellon-server@ does not provide an authentication
  mechanism! You should proxy @mellon-server@ behind a secure
  HTTPS server such as Nginx.

Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     examples/*.hs
Extra-Doc-Files:        examples/*.hs
                      , API.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Mellon.Server
                      , Mellon.Server.API
                      , Mellon.Server.Docs
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , bytestring
                      , either
                      , http-types
                      , lucid
                      , mellon
                      , servant
                      , servant-docs
                      , servant-lucid
                      , servant-server
                      , text
                      , time
                      , transformers
                      , wai
                      , warp

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Main.hs
  Build-Depends:        aeson
                      , base
                      , bytestring
                      , either
                      , hspec
                      , hspec-wai
                      , http-client
                      , http-types
                      , lucid
                      , mellon
                      , servant
                      , servant-docs
                      , servant-lucid
                      , servant-server
                      , text
                      , time
                      , transformers
                      , wai
                      , wai-extra
                      , warp
  Other-Modules:        Mellon.Server
                      , Mellon.Server.API
                      , Mellon.Server.Docs

Source-Repository head
  Type:                 git
--  Location:             
